--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 <a href="account.html"><i class="fas fa-user"></i> Account</a>
                 <a href="#"><i class="fas fa-heart"></i> Wishlist</a>
                 <a href="#"><i class="fas fa-shopping-cart"></i> Cart</a>
-                <a href="/sell.html"><i class="fas fa-store"></i> Sell</a>
+                <a href="https://ashishsharma070704.github.io/ThreadCycle/index.html"><i class="fas fa-store"></i> Sell</a>
             </div>
         </div>
     </header>
